# nanochat

./: .dockerignore  .gitignore  .releaserc.json  SAMOSACHAAT_PLATFORM_PLAN.md  deploy.sh  docker-compose.yml
.github/workflows/: build-dev.yml  ci.yml  deploy-ec2.yml  nightly.yml  promote-uat.yml  release-prod.yml  release.yml
docs/: assignment-completion-plan.md
helm/observability/: values.yaml
helm/samosachaat/: values-qa.yaml  values.yaml
helm/samosachaat/templates/: _helpers.tpl  auth-deployment.yaml  chat-api-deployment.yaml  configmap.yaml  db-migrate-job.yaml  frontend-deployment.yaml  inference-deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml  servicemonitor.yaml
modal/: _model.py  _tokenizer.py  serve.py
nginx/: nginx.conf
scripts/: demo-schema-change.sh  generate-jwt-keys.sh  rotate-nodes.sh  smoke-test-k8s.sh
services/chat-api/: Dockerfile  pyproject.toml
services/chat-api/src/: config.py  main.py
services/chat-api/src/models/: conversation.py
services/chat-api/src/routes/: admin.py
services/chat-api/src/tests/: test_conversations.py
services/frontend/: tailwind.config.ts
services/frontend/app/: globals.css  layout.tsx  page.tsx
services/frontend/components/: LandingFooter.tsx  LandingNav.tsx
services/frontend/hooks/: useTheme.ts
services/frontend/store/: chatStore.ts
terraform/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
terraform/environments/dev/: main.tf  variables.tf
terraform/environments/prod/: main.tf  outputs.tf  variables.tf
terraform/environments/uat/: main.tf  (+1 more)
(+19 files in other folders)
